--- a/app/src/main/res/layout/include_recognition_success.xml
+++ b/app/src/main/res/layout/include_recognition_success.xml
@@ -53,7 +53,9 @@
         android:layout_marginTop="@dimen/margin_16"
         android:text="@string/recognition_success_playback"
         android:textAppearance="@style/TextAppearance.AppCompat.Small.AmbientMusicMod.Medium"
+        android:textColor="?android:textColorPrimaryInverse"
         app:icon="@drawable/ic_recognition_success_playback"
+        app:iconTint="?android:textColorPrimaryInverse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/recognition_success_chips" />
