- Added x86_64 support - Fixed Android 13 Shizuku issue - Updated switch style - Removed "run when battery saver enabled" as it was not functioning and cannot be fixed - Fixed overlay continuning to appear when bedtime mode is enabled - Added message about static noise to playback screen

--- a/app/src/main/res/layout/include_recognition_playback.xml
+++ b/app/src/main/res/layout/include_recognition_playback.xml
@@ -52,4 +52,15 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recognition_playback_distortion_info"
+        android:layout_marginStart="@dimen/margin_16"
+        android:layout_marginEnd="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_16"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small.AmbientMusicMod.Medium"
+        android:gravity="center"
+        android:text="@string/recognition_playback_distortion_info"/>
+
 </LinearLayout>
