- Improved adaptive lock screen overlay - Fixed insets on 3 button devices - Allow install on x86_64 devices without libhoudini or libndk

--- a/app/src/main/res/xml/accessibilityservice.xml
+++ b/app/src/main/res/xml/accessibilityservice.xml
@@ -3,6 +3,6 @@
     android:accessibilityFeedbackType="feedbackGeneric"
     android:accessibilityFlags="flagDefault|flagRetrieveInteractiveWindows"
     android:canRetrieveWindowContent="true"
-    android:accessibilityEventTypes="typeWindowStateChanged"
+    android:accessibilityEventTypes="typeWindowStateChanged|typeWindowsChanged"
     android:settingsActivity="com.kieronquinn.app.ambientmusicmod.app.activities.MainActivity"
     android:description="@string/accessibility_service_description" />
