- Fixed an issue where old backups would not be deleted - Automatically grant the Restricted Settings permission required for the Accessibility Service on Android 14+ - Added keyguard category to widget to allow eventual use on the lockscreen when support is hopefully added to Android

--- a/app/src/main/res/xml/appwidgetprovider_42.xml
+++ b/app/src/main/res/xml/appwidgetprovider_42.xml
@@ -2,6 +2,7 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="250dp"
     android:minHeight="110dp"
+    android:widgetCategory="home_screen|keyguard"
     android:previewImage="@drawable/widget_preview_4_2"
     android:resizeMode="horizontal"
     android:minResizeWidth="250dp"
