--- a/app/src/main/res/xml/appwidgetprovider_dynamic.xml
+++ b/app/src/main/res/xml/appwidgetprovider_dynamic.xml
@@ -5,6 +5,7 @@
     android:minHeight="40dp"
     android:minResizeWidth="180dp"
     android:minResizeHeight="40dp"
+    android:widgetCategory="home_screen|keyguard"
     android:previewLayout="@layout/widget_preview"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="4"
