--- a/app/src/main/res/layout/fragment_root.xml
+++ b/app/src/main/res/layout/fragment_root.xml
@@ -11,6 +11,7 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:defaultNavHost="true"
         tools:navGraph="@navigation/nav_graph_root" />
 
 </FrameLayout>
