--- a/app/src/main/res/xml/appwidgetprovider_dynamic.xml
+++ b/app/src/main/res/xml/appwidgetprovider_dynamic.xml
@@ -6,6 +6,7 @@
     android:minResizeWidth="180dp"
     android:minResizeHeight="40dp"
     android:widgetCategory="home_screen|keyguard"
+    android:previewImage="@drawable/widget_preview_4_1"
     android:previewLayout="@layout/widget_preview"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="4"
